--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <!-- Zombie Field -->
     <div id="range">
              <div id="score"></div>
+             <div id="stats"></div>
              <img alt="FIRE!" id="img1" src="https://vignette1.wikia.nocookie.net/plantsvszombies/images/1/14/JetpackZombieHD.png/revision/latest?cb=20140521234908" width=13%;/>
 
 
