--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                        </div>
 
-
+                    <!-- Social Media Buttons -->
                     <div class="nav navbar navbar-right mediabuttons">
                         <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
                         <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook"/>
@@ -60,6 +60,10 @@
   
 
 <body>
+
+
+    
+
 
     <div id="clouds">
     <div class="cloud x1"></div>
@@ -114,9 +118,10 @@
             </div>
 
 
-
+            <button id="start">Start the Game</button>
 
              <div class="row" id="stats"> 
+
 
                 <div class="col-lg-11 col-md-11 col-sm-11"></div>
                 <!-- Player 2 Right Side -->
@@ -207,11 +212,7 @@
                     </div>
                </div> 
             </div>
-        <!-- End Chat Section  -->
-
-
-
-    <!--Social Media Buttons-->
+        <!-- End Chat Section -->
 
 
 
@@ -269,7 +270,7 @@
 <script src="app.js"></script>
 <script src="api.js"></script>
 <!-- Gameover Image -->
-<script>setTimeout(function(){window.location.href='Gameover.html'},30000);</script>
+<script>setTimeout(function(){window.location.href='Gameover.html'},30000);</script> 
 
 </body>
 </html>
